objects/Auditor__c.object
<CustomObject>
    <fields>
        <fullName>Alternate_Auditor_Name_s__c</fullName>
        <inlineHelpText>Names must be separated by semicolon &apos;;&apos;</inlineHelpText>
        <label>Alternate Auditor Name(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Auditor_Status_In_Text__c</fullName>
        <inlineHelpText>Auditor Status picklist is converted to text by workflow</inlineHelpText>
        <label>Auditor Status (In Text)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auditor_Status__c</fullName>
        <inlineHelpText>Auditor status as evaluated by Root Store Managers</inlineHelpText>
        <label>Auditor Status</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Confidence - High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confidence - Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confidence - Low</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Auditor_Website__c</fullName>
        <label>Auditor Website</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <inlineHelpText>Public comments</inlineHelpText>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Auditor</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Auditor_Status__c</columns>
        <columns>Auditor_Website__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Auditor</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Auditors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Validate_Auditor_Website</fullName>
        <active>true</active>
        <errorConditionFormula>NOT( 
OR(LEN (Auditor_Website__c) = 0, 
REGEX(Auditor_Website__c, &quot;^[hH][tT][tT][pP][0-9A-Za-z+&amp;@#/%?=~\\-_|!:,.;\\[\\]()]*$&quot;) 
) 
)</errorConditionFormula>
        <errorDisplayField>Auditor_Website__c</errorDisplayField>
        <errorMessage>Auditor Website URL must begin with &apos;http&apos; and can only contain letters, numbers and following characters: + &amp; @ # / % ? = ~ -_ | ! : , . ; [ ] ( )</errorMessage>
    </validationRules>
</CustomObject>